--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,8 +21,7 @@
       <md-list-item *ngIf="store.buchungsAdmin" (click)="setContent('auswertung')">Auswertung</md-list-item>
       <md-list-item *ngIf="store.buchungsAdmin || store.benutzerAdmin" (click)="setContent('verwaltung')">Verwaltung
       </md-list-item>
-      <md-list-item *ngIf="store.buchungsAdmin" (click)="setContent('kalender')">Jahresübersicht / Test-Kram
-      </md-list-item>
+      <md-list-item *ngIf="store.buchungsAdmin" (click)="setContent('kalender')">Jahresübersicht</md-list-item>
     </md-list>
   </md-sidenav>
 
