--- a/src/app/buchungen/buchungen.component.html
+++ b/src/app/buchungen/buchungen.component.html
@@ -22,7 +22,8 @@
     <md-option *ngFor="let month of monatNamen" [value]="month">{{month}}</md-option>  
   </md-select>
 
-  <button md-raised-button (click)="onGoButton()"><i class="fa fa-search"  style="color: #3f51b5"></i></button>    
+  <button md-raised-button (click)="onGoButton()">GO!</button>    
+  
 </div>
 <br>
 <div class="row columns">
