some very important Kleinigkeiten (changedetectorref usw...)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,7 @@
       <md-list-item *ngIf="store.buchungsAdmin || store.benutzerAdmin" (click)="setContent('verwaltung')">Verwaltung
       </md-list-item>
       <md-list-item *ngIf="store.buchungsAdmin" (click)="setContent('kalender')">Jahresübersicht</md-list-item>
+      <!--md-list-item (click)="setContent('kalender')">Jahresübersicht & TESTKRAM</md-list-item-->
     </md-list>
   </md-sidenav>
 
