--- a/src/app/choose-spot/choose-spot.component.html
+++ b/src/app/choose-spot/choose-spot.component.html
@@ -13,7 +13,7 @@
   <table>
     <tr *ngFor="let chu of chunks">
       <td *ngFor="let slot of chu" [class]="slot.pId>0 ? 'green':''" style="text-align: center">
-        <div *ngIf="slot.pId>0" (click)="slotClick(slot)">{{slot.pId}}</div>
+        <div *ngIf="slot.pId>0" (click)="slotClick(slot)" style="cursor:pointer">{{slot.pId}}</div>
       </td>
     </tr>
   </table>
