Korrektur vermieterIsMieter check

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -44,7 +44,7 @@
     <md-list>
       <md-list-item>
         <div class="legende color-green"></div>
-        {{store.vermieter ? 'Parkplatz frei' : 'Parkplatz gebucht'}}
+        {{store.vermieter ? 'Parkplatz Eigennutzung' : 'Parkplatz gebucht'}}
       </md-list-item>
       <md-list-item>
         <div class="legende color-yellow"></div>
