Eingabebestätigung mit Enter bei Login/Register

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,18 +2,18 @@
   <md-tab label="Login">
     <div class="row columns">
       <p>Email</p>
-      <input type="text" [(ngModel)]="user_email">
+      <input type="text" [(ngModel)]="user_email" (keyup.enter)="login()">
       <p>Password</p>
-      <input type="password" [(ngModel)]="user_password">
+      <input type="password" [(ngModel)]="user_password" (keyup.enter)="login()">
       <div [innerHTML]="innerHtmlString"></div>
     </div>
   </md-tab>
   <md-tab label="Register">
     <div class="row columns">
       <p>Email</p>
-      <input type="text" [(ngModel)]="user_email">
+      <input type="text" (keyup.enter)="login()" [(ngModel)]="user_email" >
       <p>Password</p>
-      <input type="password" [(ngModel)]="user_password">
+      <input type="password" [(ngModel)]="user_password" (keyup.enter)="login()">
       <div [innerHTML]="innerHtmlString"></div>
     </div>
   </md-tab>
