--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -54,6 +54,10 @@
         <div class="legende color-red"></div>
         {{store.vermieter ? 'Parkplatz belegt' : 'Keine Parkplätze verfügbar'}}
       </md-list-item>
+      <md-list-item *ngIf="store.vermieter">
+        <div class="legende color-blue"></div>
+        {{'Parkplatz gebucht'}}
+      </md-list-item>
     </md-list>
   </div>
 </div>
