Umbenennung: Fremdparkplatz gebucht.

--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -56,7 +56,7 @@
       </md-list-item>
       <md-list-item *ngIf="store.vermieter">
         <div class="legende color-blue"></div>
-        {{'Parkplatz gebucht'}}
+        {{'Fremdarkplatz gebucht'}}
       </md-list-item>
     </md-list>
   </div>
