--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -3,7 +3,7 @@
     M
   </button>
 
-  <div *ngIf="this.store.benutzerAdmin">
+  <div *ngIf="this.store.buchungsAdmin">
     <div class="row columns">
       <md-input-container style="flex:2">
         <input mdInput [(ngModel)]="changeMail"/>
