--- a/src/app/buchungen/buchungen.component.css
+++ b/src/app/buchungen/buchungen.component.css
@@ -1,12 +1,16 @@
 .number_col {
-    width: 15%;
-}
-.text_col {
-    width: 55%;
+  width: 15%;
+  text-align: left;
 }
 
-.title{
+.text_col {
+  width: 55%;
+  text-align: left;
+}
+
+.title {
   padding: 15px 0;
+  font-weight: bold;
 }
 
 .content-el {
