--- a/src/app/auswertung/auswertung.component.html
+++ b/src/app/auswertung/auswertung.component.html
@@ -1,20 +1,19 @@
-
 <div class="centered-content">
-  <h3>Auswertung</h3>
+  <h3 class="title">Auswertung</h3>
 </div>
 
-<div class="centered-content">  
+<div class="centered-content">
   <md-select placeholder="Vermieter" [(ngModel)]="myState"><!-- (change)="onDropdownChange('hallo')"-->
     <md-option>Alle Vermieter</md-option>
-    <md-option *ngFor="let i of vermieterArray" [value]="i.uid">{{i.user_email}}</md-option>  
+    <md-option *ngFor="let i of vermieterArray" [value]="i.uid">{{i.user_email}}</md-option>
   </md-select>
-  
+
   <!--button (click)="openPicker(1)"><i class="fa fa-calendar"></i></button-->
   <input [mdDatepicker]="vonPicker" (click)="openPicker(1)" placeholder="Von...">
   <button [mdDatepickerToggle]="vonPicker"></button>
   <md-datepicker #vonPicker  placeholder="Von Datum..."  [startAt]="vonInitDate"></md-datepicker>
-  
-  
+
+
   <!--button (click)="openPicker(2)"><i class="fa fa-calendar"></i></button-->
   <input [mdDatepicker]="bisPicker" (click)="openPicker(2)" placeholder="Bis...">
   <button [mdDatepickerToggle]="bisPicker"></button>
@@ -25,18 +24,18 @@
   <div class="row columns">
     <table>
       <tr><th class="number_col">ParkP.</th><th class="text_col">Vermieter</th><th class="number_col">Freigaben</th><th class="number_col">Davon gebucht</th></tr>
-      <tr *ngFor="let i of auswertungenArray">                
+      <tr *ngFor="let i of auswertungenArray">
         <td>{{i.parkId}}</td>
         <td>{{i.user_email}}</td>
         <td>{{i.freigaben}}</td>
         <td>{{i.davon_gebucht}}</td>
       </tr>
-    </table>  
+    </table>
   </div>
 
 
 
-  
+
   <!--md-datepicker #vonPicker>PICK1</md-datepicker>
   <input [mdDatepicker]="bisPicker">
   <md-datepicker #bisPicker>PICK2</md-datepicker>
