--- a/src/app/kalender.component.html
+++ b/src/app/kalender.component.html
@@ -1,10 +1,10 @@
 <div class="centered-content" style="margin-top: 10px">
-  <h3>Jahresübersicht</h3>
+  <h3 class="title">Jahresübersicht</h3>
 </div>
 <div class="centered-content" style="margin-top: 5px; margin-bottom: 5px">
-  <md-select placeholder="Jahr" [(ngModel)]="myYear" (change)="onYearChanged()">    
-    <md-option *ngFor="let year of yearValues" [value]="year">{{year}}</md-option>  
-  </md-select>  
+  <md-select placeholder="Jahr" [(ngModel)]="myYear" (change)="onYearChanged()">
+    <md-option *ngFor="let year of yearValues" [value]="year">{{year}}</md-option>
+  </md-select>
 </div>
 
 <div>
