fehler in der login component und type wieder zum icon hinzugefügt in index.html

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
       <p>Email</p>
       <input type="text" (keyup.enter)="login()" [(ngModel)]="user_email" >
       <p>Password</p>
-      <input type="password" [(ngModel)]="user_password" (keyup.enter)="login()">
+      <input type="password" [(ngModel)]="user_password" (keyup.enter)="register()">
       <div [innerHTML]="innerHtmlString"></div>
     </div>
   </md-tab>
