ChangeDetector in der TabGroup der LoginComponent

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<md-tab-group #tabGroup>
+<md-tab-group #tabGroup (selectChange)="onTabChanged()">
   <md-tab label="Login">
     <div class="row columns">
       <p>Email</p>
