--- a/src/assets/deka-material.scss
+++ b/src/assets/deka-material.scss
@@ -9,7 +9,7 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$candy-app-primary: mat-palette($mat-blue, A200);
+$candy-app-primary: mat-palette($mat-blue_grey, 400);
 $candy-app-accent:  mat-palette($mat-teal);
 
 // The warn palette is optional (defaults to red).
