--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,15 @@
   <button md-icon-button (click)="sidenav.open()" style="cursor:pointer">
     <md-icon class="md-24">menu</md-icon>
   </button>
-  <span class="header-title">
-    🅿️ 🦅
-      </span>
-  <span class="hide-for-small-only" style="margin-left:10px">
-      Parken Eagle
+  <span style="margin-left:10px">
+      Parkplatztool
     </span>
   <span style="flex: 1 1 auto;"></span>
-  <span style="font-size: x-small">
-      by
-    </span>
+  <!--<span style="font-size: x-small">-->
+      <!--by-->
+    <!--</span>-->
   <img src="assets/deka-colored.svg" class="deka-logo">
-  <span style="font-size: medium">
+  <span style="font-size: medium" class="hide-for-small-only">
     IT-Entwicklung LUX
     </span>
   <!--<span style="font-size: small">-->
