--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
       Parkplatztool
     </span>
   <span style="flex: 1 1 auto;"></span>
-  <img src="assets/deka-colored.svg" class="deka-logo">
+  <img src="assets/deka-colored32.svg" class="deka-logo">
+  <!--<img src="assets/deka-colored.svg" class="deka-logo">-->
   <span style="font-size: medium; margin-top: 10px" class="hide-for-small-only">
     IT ENTWICKLUNG LUX
   </span>
