--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <md-tab-group #tabGroup (selectChange)="onTabChanged()">
   <md-tab label="Login">
     <div class="row columns">
-      <h1>Freischaltung des Login am 19.09.2017 um 12:00 Uhr</h1>
+      <!--h1>Freischaltung des Login am 19.09.2017 um 12:00 Uhr</h1-->
       <p>Email</p>
       <input type="text" [(ngModel)]="user_email" (keyup.enter)="login()">
       <p>Password</p>
@@ -11,7 +11,7 @@
   </md-tab>
   <md-tab label="Register">
     <div class="row columns">
-      <h1>Freischaltung des Login am 19.09.2017 um 12:00 Uhr</h1>
+      <!--h1>Freischaltung des Login am 19.09.2017 um 12:00 Uhr</h1-->
       <p>Email</p>
       <input type="text" (keyup.enter)="login()" [(ngModel)]="user_email" >
       <p>Password</p>
