--- a/src/app/verwaltung/verwaltung.component.html
+++ b/src/app/verwaltung/verwaltung.component.html
@@ -7,7 +7,7 @@
       <tr><th></th><th class="text_col">Email</th><th class="number_col">Aktiv</th><th class="number_col">Buchungsv.</th><th class="number_col">Benutzerv.</th></tr>
       <tr *ngFor="let i of userArray; let ind = index">
         <td><md-icon (click)="onDeleteUser(ind)">delete</md-icon></td>
-        <td>{{i.email}}</td>
+        <td><input style="width:100%" value ={{i.email}}></td><!-- (keyup.enter)="onEmailChanged(ind)" [attr.id]="ind"></td>-->
         <!--td>{{i.parkId}}</td-->
         <td><md-checkbox (change)="onIsActiveChange(ind)" [checked]="i.isActive"></md-checkbox></td>
         <td><md-checkbox (change)="onBuchungChange(ind)" [checked]="i.buchungsAdmin"></md-checkbox></td>
